--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1113,21 +1113,13 @@ journal = {Neural computation},
 doi = {10.1162/neco.1997.9.8.1735}
 }
 
-@misc{rnnoise,
-      title={A Hybrid DSP/Deep Learning Approach to Real-Time Full-Band Speech Enhancement}, 
-      author={Jean-Marc Valin},
-      year={2018},
-      eprint={1709.08243},
-      archivePrefix={arXiv},
-      primaryClass={cs.SD}
-}
-
 @article{lstmrnngru,
 author = {Aslam, Muhammad and Lee, Jae-Myeong and Kim, Hyung-Seung and Lee, Seung-Jae and Hong, Sugwon},
 title = {Deep Learning Models for Long-Term Solar Radiation Forecasting Considering Microgrid Installation: A Comparative Study},
 journal = {Energies},
 volume = {13},
 year = {2020},
+pages = {1--15},
 number = {1},
 url = {https://www.mdpi.com/1996-1073/13/1/147},
 issn = {1996-1073},
@@ -1135,7 +1127,7 @@ doi = {10.3390/en13010147}
 }
 
 @misc{birnn,
-      title={Deep Bidirectional and Unidirectional LSTM Recurrent Neural Network for Network-wide Traffic Speed Prediction}, 
+      title={Deep Bidirectional and Unidirectional LSTM Recurrent Neural Network for Network-wide Traffic Speed Prediction},
       author={Zhiyong Cui and Ruimin Ke and Ziyuan Pu and Yinhai Wang},
       year={2019},
       eprint={1801.02143},
@@ -1502,9 +1494,7 @@ doi={10.1109/WIAMIS.2013.6616139},
 url={https://hal.archives-ouvertes.fr/hal-00958661/document}}
 
 @article{musicsepintro1,
-  author={Z. Rafii and A. Liutkus and
-          F. R. Stöter and S. I. Mimilakis
-          and D. FitzGerald and B. Pardo},
+  author={Rafii, Zafar and Liutkus, Antoine and Stöter, Fabian-Robert and Mimilakis, Stylianos Ioannis and FitzGerald, Derry and Pardo, Bryan},
   journal={IEEE/ACM Transactions on Audio, Speech, and Language Processing},
   title={An overview of lead and accompaniment separation in music},
   year={2018},
@@ -1571,3 +1561,12 @@ volume={32},
 number={2},
 pages={236--243},
 doi={10.1109/TASSP.1984.1164317}}
+
+@misc{audiocnn3,
+      title={Raw Waveform-based Audio Classification Using Sample-level CNN Architectures}, 
+      author={Jongpil Lee and Taejun Kim and Jiyoung Park and Juhan Nam},
+      year={2017},
+      eprint={1712.00866},
+      archivePrefix={arXiv},
+      primaryClass={cs.SD}
+}
