--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -323,11 +323,11 @@ pages={920-923}
 
 @inproceedings{variableq1,
 title = "A Matlab Toolbox for Efficient Perfect Reconstruction Time-Frequency Transforms with Log-Frequency Resolution,",
-author = "Christian Sch{\"o}rkhuber and Anssi Klapuri and Nicki Holighaus and Monika D{\"o}rfler",
-year = "2014",
-language = "English",
-booktitle = "AES 53rd International Conference on Semantic Audio, London, UK, January 27, 2014",
-publisher = "Audio Engineering Society",
+author = {Christian Sch{\"o}rkhuber and Anssi Klapuri and Nicki Holighaus and Monika D{\"o}rfler},
+year = {2014},
+booktitle = {AES 53rd International Conference on Semantic Audio},
+publisher = {Audio Engineering Society},
+pages = {1--8}
 }
 
 @inproceedings{cqtseparation,
@@ -1372,9 +1372,10 @@ doi={10.1098/rsta.2020.0079}
 @article{convtranspose,
 author = {Gsaxner, Christina and Roth, Peter M. and Wallner, Jürgen and Egger, Jan},
 year = {2019},
-pages = {e0212550},
+pages = {1--20},
 title = {Exploit fully automatic low-level segmented PET data for training high-level deep learning algorithms for the corresponding CT data},
 volume = {14},
+number = {3},
 journal = {PLOS ONE},
 doi = {10.1371/journal.pone.0212550}
 }
